umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_ethyl-fluoride.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "F#n3#v"
    bonds:
      - "-"
      - "-"
