umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_ethyl-isothiocyanate.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "N#n#v3"
      - "C#v4"
      - "S#n2#v2"
    bonds:
      - "-"
      - "-"
      - "="
      - "="
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "N#n#v3"
      - "C#v4"
      - "S#n2#v2"
    bonds:
      - "-"
      - "-"
      - "="
      - "="
