umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_ethyl-nitrate.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`Co"
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "O#n2#v2"
      - "N#c+#v4"
      - "O#n2#v2"
      - "O#c-#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`Co"
    atoms:
      - "C#h3#v"
      - "C#h2#v2"
      - "O#n2#v2"
      - "N#c+#v4"
      - "O#n2#v2"
      - "O#c-#n3#v"
    bonds:
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
