umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@functional_groups_ethyl-thiocyanate.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: functional_groups
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "{CH3v1}"
      - "{CH2v2}"
      - "{S/2v2}"
      - "{Cv4}"
      - "{N/1v3}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "#"
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "{CH3v1}"
      - "{CH2v2}"
      - "{S/2v2}"
      - "{Cv4}"
      - "{N/1v3}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "#"
